--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ div.todoContainer {
   background-color: rgb(155, 163, 163, 0.2);
   display: flex;
   border-radius: 10px;
+  overflow: auto;
 }
 
 div.main {
@@ -61,12 +62,18 @@ div .button {
   align-items: center;
 }
 
+div ul li p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 div ul li { 
   display: flex;
   justify-content: space-between;
   margin: 1rem;
   list-style-type: none;
-  padding: 1rem;
+  padding: 15px 10px 15px 10px;
   background-color: #516c8a;
 }
 
