--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,11 @@ div .button {
   cursor: pointer;
 }
 
+div .button:hover{
+  background-color: #0e49a1;
+  transition: 0.3s;
+}
+
 div ul li p {
   display: flex;
   justify-content: center;
